--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "express-validator": "^6.4.0"
+    "express-validator": "^6.4.0",
+    "mongoose": "^5.9.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
