--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-validator": "^6.4.0",
-    "mongoose": "^5.9.3"
+    "mongoose": "^5.9.3",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
